# PetriNet

./: CMakeLists.txt  README.md
examples/: PRZ1.COL  PRZ1.DCD  PRZ1.DKJ  PRZ1.MCL  PRZ1.MCN  PRZ2.COL  PRZ2.CON  PRZ2.DKJ  PRZ2.GRF  PRZ2.MCG  PRZ2.NON  PRZ2.VER  PRZ3.CMC  PRZ3.COL  PRZ3.CON  PRZ3.DCD  PRZ3.DKJ  PRZ3.GRF  PRZ3.MCG  PRZ3.MCL  PRZ3.MCN  PRZ3.NON  PRZ3.VER
org/: automat.pas  cmhc.pas  colored.pas  encoding.pas  graf.pas  petri.pas  stddlgs.pas  tools.pas  typy.pas
src/: automat.cpp  automat.h  colored.cpp  colored.h  colored1.cpp  defs.h  encoding.cpp  encoding.h  graph.cpp  graph.h  petri.cpp  petri.h  tools.cpp  tools.h  types.h
